Added new option to pass in a custom html template for HTML partials Removed 64bit encoded image for logo and left it blank, so now 'Logo' text is displayed at the top of the generated dashboard Added 'g' flag for removal of data comments so that all of them get cleaned up for builds Added custom html comments to one of the custom fixtures

--- a/dashboard/dashboard-template.hbs
+++ b/dashboard/dashboard-template.hbs
@@ -202,7 +202,11 @@
     <body class="dashboard-body">
         <header>
             <div class="container main-title">
+                {{#if logo}}
                 <img alt="Logo" width="170" src="{{logo}}" />
+                {{else}}
+                <h3>Logo</h3>
+                {{/if}}
             </div>
         </header>
         <div class="container cf">
