--- a/dashboard/html-template.hbs
+++ b/dashboard/html-template.hbs
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>custom_regex2</title>
+        <title>{{name}}</title>
         <meta name="description" content="A Simple Dashboard">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--[if IE 8]>
@@ -30,7 +30,7 @@
             })();
         </script><![endif]-->
     </head>
-    <body class="dashboard-body">
-        <h1>Testing</h1>
+    <body class="html-body">
+        {{{source}}}
     </body>
 </html>
