--- a/test/fixtures/jade/jade-module.jade
+++ b/test/fixtures/jade/jade-module.jade
@@ -2,11 +2,12 @@
     {
         "status": "development",
         "category": "module",
-        "label": "my-component",
-        "link": "../test/fixtures/custom/my-component.html"
+        "label": "jade-module",
+        "link": "../test/fixtures/custom/jade-module.html"
     }
     [/dash]
 //- [dash:jade]
+    include test/fixtures/jade/jade-module
     +myComponent()
     [/dash]
 
