Added `assets` option that allows authors to pass in external files they want to include in their custom dashboard template. Added jquery and less to default dashboard

--- a/test/fixtures/jade/jade-module.jade
+++ b/test/fixtures/jade/jade-module.jade
@@ -3,7 +3,7 @@
         "status": "development",
         "category": "module",
         "label": "jade-module",
-        "link": "../test/fixtures/custom/jade-module.html"
+        "link": "./jade-module.html"
     }
     [/dash]
 //- [dash:jade]
