--- a/test/fixtures/jade/jade-page.jade
+++ b/test/fixtures/jade/jade-page.jade
@@ -2,8 +2,7 @@
     {
         "status": "development",
         "category": "page",
-        "label": "jade-page",
-        "link": "../test/fixtures/custom/jade-page.html"
+        "label": "jade-page"
     }
     [/dash]
 
