--- a/dashboard/dashboard-template.hbs
+++ b/dashboard/dashboard-template.hbs
@@ -1,254 +1,15 @@
-<!DOCTYPE html><!--[if IE 8]><html class="ie8 no-js" lang="en"><![endif]-->
-<!--[if IE 9]><html lang="en" class="ie9 no-js"><![endif]-->
+<!DOCTYPE html><!--[if IE 8]><html class="ie8" lang="en"><![endif]-->
+<!--[if IE 9]><html lang="en" class="ie9"><![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" class="no-js"><!--<![endif]-->
+<html lang="en"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Dashboard</title>
         <meta name="description" content="A Simple Dashboard">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            html,
-            body {
-                padding: 0;
-                margin: 0;
-                height: 100%;
-                width: 100%;
-                font-family: 'Helvetica Nue', Helvetica, sans-serif;
-            }
-
-            /* Box Sizing */
-            *,
-            *:before,
-            *:after {
-                -moz-box-sizing: border-box;
-                -webkit-box-sizing: border-box;
-                box-sizing: border-box;
-            }
-
-            /* Clearfix */
-            .cf:before,
-            .cf:after {
-                content: " "; /* 1 */
-                display: table; /* 2 */
-            }
-
-            .cf:after {
-                clear: both;
-            }
-
-            /**
-             * For IE 6/7 only
-             * Include this rule to trigger hasLayout and contain floats.
-             */
-            .cf {
-                *zoom: 1;
-            }
-            ul {
-                -moz-padding-start: 0;
-                -webkit-padding-start: 0;
-                -khtml-padding-start: 0;
-                -o-padding-start: 0;
-                -webkit-margin-before: 0;
-                -moz-margin-before: 0;
-                -khtml-margin-before: 0;
-                -o-margin-before: 0;
-                -webkit-margin-after: 0;
-                -moz-margin-after: 0;
-                -khtml-margin-after: 0;
-                -o-margin-after: 0;
-            }
-            /* End Reset */
-
-            .hide {
-                display: none
-            }
-
-            .container {
-                margin-left: auto;
-                margin-right: auto;
-                width: 800px;
-            }
-            .main-title {
-                padding: 10px;
-                text-align: center;
-            }
-            .item-list, .sidebar-list {
-                list-style-type: none;
-            }
-            .content {
-                float: left;
-                width: 70%;
-                padding: 2.5%;
-            }
-            .sidebar {
-                float: left;
-                position: relative;
-                width: 30%;
-                padding: 2.5%;
-                border-right: 1px solid #ededed;
-            }
-            .sidebar-title {
-                font-size: 12px;
-                padding-bottom: 5px;
-                text-transform: uppercase;
-                font-weight: normal;
-                border-bottom: #ededed 1px solid;
-                color: #333;
-            }
-            .sidebar-list {
-                width: 100%;
-            }
-            .sidebar-list li {
-                border: none;
-                position: relative;
-                background: #f7f7f7;
-                border-radius: 5px;
-                padding: 3px;
-                margin-bottom: 5px;
-                border: 1px solid #fff;
-            }
-            .sidebar-list li:after {
-              content: '✓';
-              position: absolute;
-              display: none;
-              right: 10px;
-              top: 0px;
-              line-height: 32px;
-            }
-            .sidebar-list li.active:after {
-              display: block
-            }
-            .sidebar-list li:hover {
-              border: 1px solid #a8d9e3;
-            }
-            .sidebar-list li button {
-                border: none;
-                background: none;
-                width: 100%;
-                text-align: left;
-                font-size: 0.8em;
-            }
-            .sidebar-list li button:focus {
-              outline: none;
-            }
-            .item-list li {
-                border: none;
-                background: #f7f7f7;
-                border-radius: 5px;
-                padding: 7px;
-                margin-bottom: 5px;
-            }
-            .item-list li a {
-                border: none;
-                background: none;
-                width: 100%;
-                text-align: left;
-                color: inherit;
-                font-size: 0.8em;
-                text-decoration: none;
-            }
-
-            .font-white {
-                color: #fff;
-            }
-            .font-black {
-                color: #333;
-            }
-
-            .section-wrapper {
-              position: relative;
-            }
-            .filter-clear {
-              position: absolute;
-              top: -6px;
-              right: 0;
-              background: #ededed;
-              border: none;
-              border-radius: 3px;
-              line-height: 14px;
-              display: none;
-            }
-            .menu-icon {
-                display: none;
-                position: absolute;
-                top: 10px;
-                right: -50px;
-                width: 50px;
-                height: 50px;
-                background: #acacac;
-            }
-            .menu-bar-list {
-                margin-top: 9px;
-                margin-left: -1px;
-                list-style-type: none;
-            }
-            .menu-bar-list li {
-                border-bottom: 4px solid #fff;
-                height: 9px;
-                margin: 0 13px;
-            }
-
-            /* Status Styles */
-            li.development {
-                background: #94caeb;
-                color: #fff;
-            }
-            li.qa {
-                background: #eb9494;
-                color: #fff;
-            }
-            li.blocked {
-                background: #e74c3c;
-                color: #fff;
-            }
-            li.queued {
-                background: #c9c9c9;
-                color: #fff;
-            }
-            li.review {
-                background: #8fbc23;
-                color: #fff;
-            }
-            li.live {
-                background: #2a4a67;
-                color: #fff;
-            }
-            /* End Status Styles */
-            /* Media Queries */
-            @media all and (max-width: 768px) {
-                .sidebar {
-                    position: absolute;
-                    width: 200px;
-                    top: 0;
-                    left: -200px;
-                    bottom: 0;
-                    background: #acacac;
-                    border: none;
-                }
-                .sidebar.open {
-                    left: 0;
-                }
-                .menu-icon {
-                    display: block;
-                }
-                .container {
-                    width: 100%;
-                }
-                .content {
-                    width: 100%;
-                }
-                .sidebar-title {
-                    border-bottom: #fff 1px solid;
-                    color: #fff;
-                }
-                .sidebar-list li {
-                    border: 1px solid #acacac;
-                }
-            }
-            /* End Media Queries */
-        </style><!--[if IE 8]>
+        <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
+        <!--[if IE 8]>
         <script>
             // Protect window.console method calls, e.g. console is not defined on IE
             (function() {
@@ -269,6 +30,7 @@
                 }
             })();
         </script><![endif]-->
+        <script src="scripts/less.js" type="text/javascript"></script>
     </head>
     <body class="dashboard-body">
         <header>
@@ -294,11 +56,11 @@
                     <ul class="sidebar-list category">
                     {{#each categories}}
                         {{#ifvalue class value='page'}}
-                        <li class="{{class}} active">
+                        <li class="{{class}} active" data-category="{{class}}">
                             <button type="button" class="font-black">{{name}}</button>
                         </li>
                         {{else}}
-                        <li class="{{class}}">
+                        <li class="{{class}}" data-category="{{class}}">
                             <button type="button" class="font-black">{{name}}</button>
                         </li>
                         {{/ifvalue}}
@@ -333,113 +95,7 @@
                 </ul>
             </div>
         </div>
-        <script>
-            /*jshint browser: true*/
-            'use strict';
-            (function() {
-
-
-                var itemList = document.querySelector('.item-list');
-                var categoryList = document.querySelector('.category');
-                var legendList = document.querySelector('.legend');
-
-                var categoryItems = categoryList.getElementsByTagName('li');
-                var itemItems = itemList.getElementsByTagName('li');
-                var legendItems = legendList.getElementsByTagName('li');
-
-                var clearButtons = document.querySelectorAll('.filter-clear');
-
-                var sidebar = document.querySelector('.sidebar');
-                var menuButton = document.querySelector('.menu-icon');
-                var isOpen = false;
-
-                var changeActiveItem = function(items, theClass, context) {
-                  var regex = new RegExp(' active', 'g');
-                  for (var j = 0; j < items.length; j += 1) {
-                      items[j].className = items[j].className.replace(regex, '');
-                  }
-                  context.className += ' active';
-                };
-
-                var clearFilters = function(context) {
-                  context.style.display = 'none';
-                  var listItems = context.parentNode.getElementsByTagName('li');
-                  for (var i = 0; i < listItems.length; i += 1) {
-                    listItems[i].className = listItems[i].className.replace(/ active/, '').replace(/active /, '').replace(/active/, '')
-                  }
-                };
-
-                var showClearButton = function(context) {
-                  context.parentNode.parentNode.querySelector('.filter-clear').style.display = 'block';
-                };
-
-                var filterItems = function() {
-                  var activeSidebarItems = document.querySelector('.sidebar').querySelectorAll('.active');
-                  var filters = [];
-                  for (var i = 0; i < activeSidebarItems.length; i += 1) {
-                    filters.push(activeSidebarItems[i].className.split(' ')[0]);
-                  }
-                  for (var j = 0; j < itemItems.length; j += 1) {
-                    var classes = itemItems[j].className.split(' ');
-                    var show = true;
-                    for (i = 0; i < filters.length; i += 1) {
-                      if (classes.indexOf(filters[i]) > -1) {
-                      }
-                      else {
-                        show = false;
-                      }
-                    }
-                    if (show) {
-                      itemItems[j].className = itemItems[j].className.replace(/ hide/, '').replace(/hide /, '').replace(/hide/, '');
-                    }
-                    else if (itemItems[j].className.indexOf('hide') === -1) {
-                      itemItems[j].className = itemItems[j].className.concat(' hide');
-                    }
-                  }
-                };
-
-                var catItemsClick = function() {
-                    changeActiveItem(categoryItems, 'active', this);
-                    filterItems();
-                };
-
-                var legendItemsClick = function() {
-                    changeActiveItem(legendItems, 'active', this);
-                    showClearButton(this);
-                    filterItems();
-                };
-
-                var clearButtonsClick = function() {
-                    clearFilters(this);
-                    filterItems();
-                };
-
-                var menuButtonClick = function() {
-                    if (!isOpen) {
-                        isOpen = true;
-                        sidebar.className += ' open';
-                    }
-                    else {
-                        isOpen = false;
-                        sidebar.className = sidebar.className.replace(' open', '').replace('open', '');
-                    }
-                };
-
-                for (var i = 0; i < categoryItems.length; i += 1) {
-                    categoryItems[i].addEventListener('click', catItemsClick);
-                }
-
-                for (i = 0; i < legendItems.length; i += 1) {
-                    legendItems[i].addEventListener('click', legendItemsClick);
-                }
-
-                for (i = 0; i < clearButtons.length; i += 1) {
-                    clearButtons[i].addEventListener('click', clearButtonsClick);
-                }
-
-                menuButton.addEventListener('click', menuButtonClick);
-
-            })();
-        </script>
+        <script type="text/javascript" src="scripts/jquery.js"></script>
+        <script type="text/javascript" src="scripts/main.js"></script>
     </body>
 </html>
