--- a/dashboard/html-template.hbs
+++ b/dashboard/html-template.hbs
@@ -1,7 +1,7 @@
-<!DOCTYPE html><!--[if IE 8]><html class="ie8 no-js" lang="en"><![endif]-->
-<!--[if IE 9]><html lang="en" class="ie9 no-js"><![endif]-->
+<!DOCTYPE html><!--[if IE 8]><html class="ie8" lang="en"><![endif]-->
+<!--[if IE 9]><html lang="en" class="ie9"><![endif]-->
 <!--[if !IE]><!-->
-<html lang="en" class="no-js"><!--<![endif]-->
+<html lang="en"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
