Updated template to use `generated` instead of `data`.

--- a/dashboard/dashboard-template.hbs
+++ b/dashboard/dashboard-template.hbs
@@ -81,7 +81,7 @@
             </div>
             <div class="content">
                 <ul class="item-list">
-                {{#each data}}
+                {{#each generated}}
                     {{#ifvalue category value='page'}}
                     <li class="{{category}} {{status}}">
                         <a href="{{link}}">{{label}}</a>
