Fixed dashboard less include Updated readme

--- a/dashboard/dashboard-template.hbs
+++ b/dashboard/dashboard-template.hbs
@@ -8,7 +8,7 @@
 			<title>Dashboard</title>
 			<meta name="description" content="A Simple Dashboard">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link rel="stylesheet/less" type="text/css" href="styles/dashboard.less" />
+			<link rel="stylesheet/less" type="text/css" href="styles/main.less" />
 			<script type="text/javascript" src="scripts/less.js"></script>
 		</head>
 		<body class="dashboard-body">
@@ -55,7 +55,7 @@
 										{{#if logo}}
 										<img alt="Logo" width="200" src="{{logo}}" />
 										{{else}}
-										<h3>Logo</h3>
+										<h3>Logo Goes Here</h3>
 										{{/if}}
 								</div>
 								<ul class="item-list">
